# IRISW106WifiTest

./: .gitignore  CMakeLists.txt  README.md  prj.conf
PC_Site/: CMakeLists.txt  client.c  server.c  udp_socket_client.c  udp_socket_server.c
boards/: ubx_evk_iris_w1.conf
modules/tcp_socket_demo/: CMakeLists.txt  Kconfig  tcp_socket.c  tcp_socket.h
modules/tcp_socket_demo copy/: tcp_socket.h
modules/tcp_socket_demo/zephyr/: module.yaml
modules/udp_socket_demo/: CMakeLists.txt  Kconfig  udp_socket.c  udp_socket.h
modules/udp_socket_demo/zephyr/: module.yaml
modules/wifi_utilities/: wifi_utilities.c
src/: main.c  wifi.c  wifi.h
src/communication/: tcp_socket.c  tcp_socket.h
